tests/baselines/reference/arrayAssignmentTest1.errors.txt
arrayAssignmentTest1.ts(46,5): error TS2741: Property 'IM1' is missing in type 'undefined[]' but required in type 'I1'.
arrayAssignmentTest1.ts(47,5): error TS2739: Type 'undefined[]' is missing the following properties from type 'C1': IM1, C1M1
arrayAssignmentTest1.ts(48,5): error TS2739: Type 'undefined[]' is missing the following properties from type 'C2': C2M1, IM1, C1M1
arrayAssignmentTest1.ts(49,5): error TS2741: Property 'CM3M1' is missing in type 'undefined[]' but required in type 'C3'.
arrayAssignmentTest1.ts(60,1): error TS2322: Type 'C3[]' is not assignable to type 'I1[]'.
  Property 'IM1' is missing in type 'C3' but required in type 'I1'.
arrayAssignmentTest1.ts(64,1): error TS2322: Type 'I1[]' is not assignable to type 'C1[]'.
  Property 'C1M1' is missing in type 'I1' but required in type 'C1'.
arrayAssignmentTest1.ts(65,1): error TS2322: Type 'C3[]' is not assignable to type 'C1[]'.
  Type 'C3' is missing the following properties from type 'C1': IM1, C1M1
arrayAssignmentTest1.ts(68,1): error TS2322: Type 'C1[]' is not assignable to type 'C2[]'.
  Property 'C2M1' is missing in type 'C1' but required in type 'C2'.
arrayAssignmentTest1.ts(69,1): error TS2322: Type 'I1[]' is not assignable to type 'C2[]'.
  Type 'I1' is missing the following properties from type 'C2': C2M1, C1M1
arrayAssignmentTest1.ts(70,1): error TS2322: Type 'C3[]' is not assignable to type 'C2[]'.
  Type 'C3' is missing the following properties from type 'C2': C2M1, IM1, C1M1
arrayAssignmentTest1.ts(75,1): error TS2322: Type 'C2[]' is not assignable to type 'C3[]'.
  Property 'CM3M1' is missing in type 'C2' but required in type 'C3'.
arrayAssignmentTest1.ts(76,1): error TS2322: Type 'C1[]' is not assignable to type 'C3[]'.
  Property 'CM3M1' is missing in type 'C1' but required in type 'C3'.
arrayAssignmentTest1.ts(77,1): error TS2322: Type 'I1[]' is not assignable to type 'C3[]'.
  Property 'CM3M1' is missing in type 'I1' but required in type 'C3'.
arrayAssignmentTest1.ts(79,1): error TS2322: Type '() => C1' is not assignable to type 'any[]'.
arrayAssignmentTest1.ts(80,1): error TS2740: Type '{ one: number; }' is missing the following properties from type 'any[]': length, pop, push, concat, and 16 more.
arrayAssignmentTest1.ts(82,1): error TS2740: Type 'C1' is missing the following properties from type 'any[]': length, pop, push, concat, and 16 more.
arrayAssignmentTest1.ts(83,1): error TS2740: Type 'C2' is missing the following properties from type 'any[]': length, pop, push, concat, and 16 more.
arrayAssignmentTest1.ts(84,1): error TS2740: Type 'C3' is missing the following properties from type 'any[]': length, pop, push, concat, and 16 more.
arrayAssignmentTest1.ts(85,1): error TS2740: Type 'I1' is missing the following properties from type 'any[]': length, pop, push, concat, and 16 more.


==== arrayAssignmentTest1.ts (19 errors) ====
    interface I1 {
    	IM1():void[];
    }
    
    class C1 implements I1 { 
    	IM1():void[] {return null;}
    	C1M1():C1[] {return null;}
     }
    class C2 extends C1 {
        C2M1():C2[] { return null;}
    }
    
    class C3 {
        CM3M1() { return 3;}
    }
    
    
    /*
    
    This behaves unexpectedly with the following types:
    
    Type 1 of any[]:
    
    * Type 2 of the following throws an error but shouldn't: () => void[], SomeClass[], and {one: 1}[].
    
    * Type 2 of the following doesn't throw an error but should: {one: 1}, new() => SomeClass, SomeClass.
    
    */
    var a1 : any = null;
    var c1 : C1 = new C1();
    var i1 : I1 = c1;
    var c2 : C2 = new C2();
    var c3 : C3 = new C3();
    var o1 = {one : 1};
    var f1 = function () { return new C1();}
    
    var arr_any: any[] = [];
    var arr_i1: I1[] = [];
    var arr_c1: C1[] = [];
    var arr_c2: C2[] = [];
    var arr_i1_2: I1[] = [];
    var arr_c1_2: C1[] = [];
    var arr_c2_2: C2[] = [];
    var arr_c3: C3[] = [];
    
    var i1_error: I1 = []; // should be an error - is
        ~~~~~~~~
!!! error TS2741: Property 'IM1' is missing in type 'undefined[]' but required in type 'I1'.
!!! related TS2728 arrayAssignmentTest1.ts:2:2: 'IM1' is declared here.
    var c1_error: C1 = []; // should be an error - is
        ~~~~~~~~
!!! error TS2739: Type 'undefined[]' is missing the following properties from type 'C1': IM1, C1M1
    var c2_error: C2 = []; // should be an error - is
        ~~~~~~~~
!!! error TS2739: Type 'undefined[]' is missing the following properties from type 'C2': C2M1, IM1, C1M1
    var c3_error: C3 = []; // should be an error - is
        ~~~~~~~~
!!! error TS2741: Property 'CM3M1' is missing in type 'undefined[]' but required in type 'C3'.
!!! related TS2728 arrayAssignmentTest1.ts:14:5: 'CM3M1' is declared here.
    
    
    arr_any = arr_i1; // should be ok - is
    arr_any = arr_c1; // should be ok - is
    arr_any = arr_c2; // should be ok - is
    arr_any = arr_c3; // should be ok - is
    
    arr_i1 = arr_i1; // should be ok - subtype relationship - is
    arr_i1 = arr_c1; // should be ok - subtype relationship - is
    arr_i1 = arr_c2; // should be ok - subtype relationship - is
    arr_i1 = arr_c3; // should be an error - is
    ~~~~~~
!!! error TS2322: Type 'C3[]' is not assignable to type 'I1[]'.
!!! error TS2322:   Property 'IM1' is missing in type 'C3' but required in type 'I1'.
!!! related TS2728 arrayAssignmentTest1.ts:2:2: 'IM1' is declared here.
    
    arr_c1 = arr_c1; // should be ok - subtype relationship - is
    arr_c1 = arr_c2; // should be ok - subtype relationship - is
    arr_c1 = arr_i1; // should be an error - is
    ~~~~~~
!!! error TS2322: Type 'I1[]' is not assignable to type 'C1[]'.
!!! error TS2322:   Property 'C1M1' is missing in type 'I1' but required in type 'C1'.
!!! related TS2728 arrayAssignmentTest1.ts:7:2: 'C1M1' is declared here.
    arr_c1 = arr_c3; // should be an error - is
    ~~~~~~
!!! error TS2322: Type 'C3[]' is not assignable to type 'C1[]'.
!!! error TS2322:   Type 'C3' is missing the following properties from type 'C1': IM1, C1M1
    
    arr_c2 = arr_c2; // should be ok - subtype relationship - is
    arr_c2 = arr_c1; // should be an error - subtype relationship - is
    ~~~~~~
!!! error TS2322: Type 'C1[]' is not assignable to type 'C2[]'.
!!! error TS2322:   Property 'C2M1' is missing in type 'C1' but required in type 'C2'.
!!! related TS2728 arrayAssignmentTest1.ts:10:5: 'C2M1' is declared here.
    arr_c2 = arr_i1; // should be an error - subtype relationship - is
    ~~~~~~
!!! error TS2322: Type 'I1[]' is not assignable to type 'C2[]'.
!!! error TS2322:   Type 'I1' is missing the following properties from type 'C2': C2M1, C1M1
    arr_c2 = arr_c3; // should be an error - is
    ~~~~~~
!!! error TS2322: Type 'C3[]' is not assignable to type 'C2[]'.
!!! error TS2322:   Type 'C3' is missing the following properties from type 'C2': C2M1, IM1, C1M1
    
    // "clean up bug" occurs at this point
    // if you move these three expressions to another file, they raise an error
    // something to do with state from the above propagating forward?
    arr_c3 = arr_c2_2; // should be an error - is
    ~~~~~~
!!! error TS2322: Type 'C2[]' is not assignable to type 'C3[]'.
!!! error TS2322:   Property 'CM3M1' is missing in type 'C2' but required in type 'C3'.
!!! related TS2728 arrayAssignmentTest1.ts:14:5: 'CM3M1' is declared here.
    arr_c3 = arr_c1_2; // should be an error - is
    ~~~~~~
!!! error TS2322: Type 'C1[]' is not assignable to type 'C3[]'.
!!! error TS2322:   Property 'CM3M1' is missing in type 'C1' but required in type 'C3'.
!!! related TS2728 arrayAssignmentTest1.ts:14:5: 'CM3M1' is declared here.
    arr_c3 = arr_i1_2; // should be an error - is
    ~~~~~~
!!! error TS2322: Type 'I1[]' is not assignable to type 'C3[]'.
!!! error TS2322:   Property 'CM3M1' is missing in type 'I1' but required in type 'C3'.
!!! related TS2728 arrayAssignmentTest1.ts:14:5: 'CM3M1' is declared here.
    
    arr_any = f1; // should be an error - is
    ~~~~~~~
!!! error TS2322: Type '() => C1' is not assignable to type 'any[]'.
    arr_any = o1; // should be an error - is
    ~~~~~~~
!!! error TS2740: Type '{ one: number; }' is missing the following properties from type 'any[]': length, pop, push, concat, and 16 more.
    arr_any = a1; // should be ok - is
    arr_any = c1; // should be an error - is
    ~~~~~~~
!!! error TS2740: Type 'C1' is missing the following properties from type 'any[]': length, pop, push, concat, and 16 more.
    arr_any = c2; // should be an error - is
    ~~~~~~~
!!! error TS2740: Type 'C2' is missing the following properties from type 'any[]': length, pop, push, concat, and 16 more.
    arr_any = c3; // should be an error - is
    ~~~~~~~
!!! error TS2740: Type 'C3' is missing the following properties from type 'any[]': length, pop, push, concat, and 16 more.
    arr_any = i1; // should be an error - is
    ~~~~~~~
!!! error TS2740: Type 'I1' is missing the following properties from type 'any[]': length, pop, push, concat, and 16 more.